crates/keron-lang/tests/corpus/errors/check/reconcile_in_val_initializer.keron
val zero: Int = if true {
  reconcile [symlink(source = "b", target = "a")]
  0
} else {
  0
}
